# ObjectTracking

./: CMakeCache.txt  CMakeLists.txt  Makefile  ObjectTracking  ObjectTracking.cpp  algorithm.cpp  algorithm.h  capture_frame.cpp  capture_frame.h  cmake_install.cmake  image_processing.cpp  image_processing.h  object_tracking.cpp  object_tracking.h  readme.md  timer.cpp  timer.h  view_frame.cpp  view_frame.h
include/: algorithm.h  capture_frame.h  image_processing.h  log4cpp.properties  object_tracking.h  timer.h  view_frame.h
src/: algorithm.cpp  capture_frame.cpp  image_processing.cpp  main.cpp  object_tracking.cpp  timer.cpp  view_frame.cpp
