cmake_minimum_required(VERSION 2.8)
project( ObjectTracking )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( ObjectTracking ObjectTracking.cpp object_tracking.cpp capture_frame.cpp view_frame.cpp image_processing.cpp timer.cpp)
target_link_libraries( ObjectTracking ${OpenCV_LIBS} )
